@@ -1,12 +1,7 @@
 {
-  "count": 24,
+  "count": 21,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-08-05T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 4,
